<resources>
    <string name="app_name">Just Java</string>
    <string name="string1">Quantity</string>
    <string name="value">0</string>
    <string name="text">ORDER</string>
    <string name="price">Order Summary</string>
    <string name="price_value">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="check">Whipped Cream</string>
    <string name="topping">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="customer_name">Name</string>

</resources>