<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/customer_name"
            android:backgroundTint="@color/purple_500"
            android:hint="@string/customer_name"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/topping"
            android:textSize="16sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cream"
            android:text="@string/check"
            android:textSize="16sp"
            android:padding="24dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chocolate"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:padding="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:text="@string/string1"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/grey"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@color/white"
                android:text="@string/value"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/price_value"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/grey"
            android:onClick="submitOrder"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>

